@@ -1,16 +1,28 @@
 package uk.gov.hmcts.reform.sscs.util;
 
-import static org.junit.Assert.assertEquals;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.Benefit.CHILD_SUPPORT;
+import static uk.gov.hmcts.reform.sscs.ccd.domain.Benefit.PIP;
+import static uk.gov.hmcts.reform.sscs.ccd.domain.Benefit.UC;
 import static uk.gov.hmcts.reform.sscs.ccd.domain.YesNo.YES;
+import static uk.gov.hmcts.reform.sscs.util.PartiesOnCaseUtil.addOtherPartiesToListOptions;
+import static uk.gov.hmcts.reform.sscs.util.PartiesOnCaseUtil.isChildSupportAppeal;
 
+import java.util.ArrayList;
 import java.util.List;
-import org.junit.Before;
-import org.junit.Test;
+import java.util.stream.Stream;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import uk.gov.hmcts.reform.sscs.ccd.domain.Appeal;
 import uk.gov.hmcts.reform.sscs.ccd.domain.Appointee;
 import uk.gov.hmcts.reform.sscs.ccd.domain.BenefitType;
 import uk.gov.hmcts.reform.sscs.ccd.domain.CcdValue;
+import uk.gov.hmcts.reform.sscs.ccd.domain.DynamicList;
 import uk.gov.hmcts.reform.sscs.ccd.domain.DynamicListItem;
 import uk.gov.hmcts.reform.sscs.ccd.domain.MrnDetails;
 import uk.gov.hmcts.reform.sscs.ccd.domain.Name;
@@ -19,28 +31,28 @@ import uk.gov.hmcts.reform.sscs.ccd.domain.Representative;
 import uk.gov.hmcts.reform.sscs.ccd.domain.SscsCaseData;
 import uk.gov.hmcts.reform.sscs.model.PartyItemList;
 
-public class PartiesOnCaseUtilTest {
+class PartiesOnCaseUtilTest {
 
     private SscsCaseData sscsCaseData;
 
-    @Before
-    public void setUp() {
+    @BeforeEach
+    void setUp() {
         sscsCaseData = SscsCaseData.builder().appeal(Appeal.builder()
-                .benefitType(BenefitType.builder().code(CHILD_SUPPORT.getShortName()).build())
-                .mrnDetails(MrnDetails.builder()
-                        .dwpIssuingOffice("3").build()).build()).build();
+            .benefitType(BenefitType.builder().code(CHILD_SUPPORT.getShortName()).build())
+            .mrnDetails(MrnDetails.builder()
+                .dwpIssuingOffice("3").build()).build()).build();
     }
 
     @Test
-    public void givenCaseWithAppellant_thenGetPartiesOnCaseWithAppellant() {
+    void givenCaseWithAppellant_thenGetPartiesOnCaseWithAppellant() {
         List<DynamicListItem> response = PartiesOnCaseUtil.getPartiesOnCase(sscsCaseData);
 
         assertEquals(1, response.size());
-        assertEquals("appellant", response.get(0).getCode());
+        assertEquals("appellant", response.getFirst().getCode());
     }
 
     @Test
-    public void givenCaseWithRep_thenGetPartiesOnCaseWithAppellantAndRep() {
+    void givenCaseWithRep_thenGetPartiesOnCaseWithAppellantAndRep() {
         sscsCaseData.getAppeal().setRep(Representative.builder().hasRepresentative("yes").build());
 
         List<DynamicListItem> response = PartiesOnCaseUtil.getPartiesOnCase(sscsCaseData);
@@ -51,7 +63,7 @@ public class PartiesOnCaseUtilTest {
     }
 
     @Test
-    public void givenCaseWithJointParty_thenGetPartiesOnCaseWithAppellantAndJointParty() {
+    void givenCaseWithJointParty_thenGetPartiesOnCaseWithAppellantAndJointParty() {
         sscsCaseData.getJointParty().setHasJointParty(YES);
 
         List<DynamicListItem> response = PartiesOnCaseUtil.getPartiesOnCase(sscsCaseData);
@@ -62,7 +74,7 @@ public class PartiesOnCaseUtilTest {
     }
 
     @Test
-    public void givenRequestToGetListWithDwpAndHmcts_thenGetPartiesOnCaseWithAppellantAndDwpAndHmcts() {
+    void givenRequestToGetListWithDwpAndHmcts_thenGetPartiesOnCaseWithAppellantAndDwpAndHmcts() {
         List<DynamicListItem> response = PartiesOnCaseUtil.getPartiesOnCaseWithDwpAndHmcts(sscsCaseData);
 
         assertEquals(3, response.size());
@@ -72,17 +84,91 @@ public class PartiesOnCaseUtilTest {
     }
 
     @Test
-    public void willGetOtherPartyAndRepOnChildSupportAppeal() {
+    void shouldRetainExistingSelectedConfidentialityPartyWhenStillValid() {
+        OtherParty otherParty = OtherParty.builder()
+            .id("1")
+            .name(Name.builder().firstName("Bo").lastName("Surname").build())
+            .build();
+        sscsCaseData.setOtherParties(List.of(new CcdValue<>(otherParty)));
+        sscsCaseData.getExtendedSscsCaseData().setSelectedConfidentialityParty(
+            new DynamicList(
+                new DynamicListItem(PartyItemList.OTHER_PARTY.getCode() + "1", "Other party 1 - Bo Surname"),
+                new ArrayList<>()
+            )
+        );
+
+        DynamicList response = PartiesOnCaseUtil.getSelectedConfidentialityPartyDropdown(sscsCaseData);
+
+        assertThat(response.getValue().getCode()).isEqualTo(PartyItemList.OTHER_PARTY.getCode() + "1");
+        assertThat(response.getListItems()).extracting(DynamicListItem::getCode)
+            .contains(PartyItemList.APPELLANT.getCode(), PartyItemList.OTHER_PARTY.getCode() + "1");
+    }
+
+    @Test
+    void shouldResetSelectedConfidentialityPartyWhenExistingSelectionNotInCurrentOptions() {
+        sscsCaseData.getExtendedSscsCaseData().setSelectedConfidentialityParty(
+            new DynamicList(new DynamicListItem("invalidCode", "Invalid"), new ArrayList<>())
+        );
+
+        DynamicList response = PartiesOnCaseUtil.getSelectedConfidentialityPartyDropdown(sscsCaseData);
+
+        assertThat(response.getValue().getCode()).isEmpty();
+        assertThat(response.getValue().getLabel()).isEmpty();
+        assertThat(response.getListItems()).extracting(DynamicListItem::getCode)
+            .contains(PartyItemList.APPELLANT.getCode());
+    }
+
+    @Test
+    void shouldReturnBlankSelectedConfidentialityPartyWhenNoExistingSelection() {
+        DynamicList response = PartiesOnCaseUtil.getSelectedConfidentialityPartyDropdown(sscsCaseData);
+
+        assertThat(response.getValue().getCode()).isEmpty();
+        assertThat(response.getValue().getLabel()).isEmpty();
+        assertThat(response.getListItems()).extracting(DynamicListItem::getCode)
+            .containsExactly(PartyItemList.APPELLANT.getCode());
+    }
+
+    @Test
+    void shouldReturnOnlyAppellantWhenNoOtherPartiesInSelectedConfidentialityPartyDropdown() {
+        DynamicList response = PartiesOnCaseUtil.getSelectedConfidentialityPartyDropdown(sscsCaseData);
+
+        assertThat(response.getListItems()).extracting(DynamicListItem::getCode)
+            .containsExactly(PartyItemList.APPELLANT.getCode());
+    }
+
+    @Test
+    void shouldExcludeRepresentativeOptionsFromSelectedConfidentialityPartyDropdown() {
+        sscsCaseData.getAppeal().setRep(Representative.builder().id("main-rep").hasRepresentative(YES.getValue()).build());
+        OtherParty otherParty = OtherParty.builder()
+            .id("1")
+            .name(Name.builder().firstName("Bo").lastName("Surname").build())
+            .rep(Representative.builder()
+                .id("2")
+                .hasRepresentative(YES.getValue())
+                .name(Name.builder().firstName("Harry").lastName("Rep").build())
+                .build())
+            .build();
+        sscsCaseData.setOtherParties(List.of(new CcdValue<>(otherParty)));
+
+        DynamicList response = PartiesOnCaseUtil.getSelectedConfidentialityPartyDropdown(sscsCaseData);
+
+        assertThat(response.getListItems()).extracting(DynamicListItem::getCode)
+            .contains(PartyItemList.APPELLANT.getCode(), PartyItemList.OTHER_PARTY.getCode() + "1")
+            .doesNotContain(PartyItemList.REPRESENTATIVE.getCode(), PartyItemList.OTHER_PARTY_REPRESENTATIVE.getCode() + "2");
+    }
+
+    @Test
+    void willGetOtherPartyAndRepOnChildSupportAppeal() {
 
         OtherParty otherParty = OtherParty.builder()
-                .id("1")
-                .name(Name.builder().firstName("Bo").lastName("Surname").title("Mr").build())
-                .rep(Representative.builder()
-                        .id("2")
-                        .hasRepresentative(YES.getValue())
-                        .name(Name.builder().firstName("Harry").lastName("Rep").build())
-                        .build())
-                .build();
+            .id("1")
+            .name(Name.builder().firstName("Bo").lastName("Surname").title("Mr").build())
+            .rep(Representative.builder()
+                .id("2")
+                .hasRepresentative(YES.getValue())
+                .name(Name.builder().firstName("Harry").lastName("Rep").build())
+                .build())
+            .build();
         sscsCaseData.setOtherParties(List.of(new CcdValue<>(otherParty)));
         List<DynamicListItem> response = PartiesOnCaseUtil.getPartiesOnCase(sscsCaseData);
         assertEquals(3, response.size());
@@ -94,22 +180,22 @@ public class PartiesOnCaseUtilTest {
     }
 
     @Test
-    public void willGetOtherPartyAppointeeAndRepOnChildSupportAppeal() {
+    void willGetOtherPartyAppointeeAndRepOnChildSupportAppeal() {
 
         OtherParty otherParty = OtherParty.builder()
-                .id("1")
-                .name(Name.builder().firstName("Bo").lastName("Surname").title("Mr").build())
-                .isAppointee(YES.getValue())
-                .appointee(Appointee.builder()
-                        .id("2")
-                        .name(Name.builder().firstName("Silva").lastName("Lining").build())
-                        .build())
-                .rep(Representative.builder()
-                        .id("3")
-                        .hasRepresentative(YES.getValue())
-                        .name(Name.builder().firstName("Harry").lastName("Rep").build())
-                        .build())
-                .build();
+            .id("1")
+            .name(Name.builder().firstName("Bo").lastName("Surname").title("Mr").build())
+            .isAppointee(YES.getValue())
+            .appointee(Appointee.builder()
+                .id("2")
+                .name(Name.builder().firstName("Silva").lastName("Lining").build())
+                .build())
+            .rep(Representative.builder()
+                .id("3")
+                .hasRepresentative(YES.getValue())
+                .name(Name.builder().firstName("Harry").lastName("Rep").build())
+                .build())
+            .build();
         sscsCaseData.setOtherParties(List.of(new CcdValue<>(otherParty)));
         List<DynamicListItem> response = PartiesOnCaseUtil.getPartiesOnCase(sscsCaseData);
         assertEquals(3, response.size());
@@ -121,7 +207,7 @@ public class PartiesOnCaseUtilTest {
     }
 
     @Test
-    public void willIncrementCounterOnLabelWhenGetMultipleOtherPartiesOnChildSupportAppeal() {
+    void willIncrementCounterOnLabelWhenGetMultipleOtherPartiesOnChildSupportAppeal() {
 
         setupOtherParties();
         List<DynamicListItem> response = PartiesOnCaseUtil.getPartiesOnCase(sscsCaseData);
@@ -142,31 +228,119 @@ public class PartiesOnCaseUtilTest {
 
     }
 
+    @ParameterizedTest
+    @MethodSource("includeRepresentativesScenarios")
+    void shouldRespectIncludeRepresentativesFlagWhenAddingOtherPartiesToListOptions(
+        boolean includeRepresentatives, int expectedSize, boolean expectsRep) {
+        final OtherParty otherParty = OtherParty.builder()
+            .id("1")
+            .name(Name.builder().firstName("Bo").lastName("Surname").build())
+            .rep(Representative.builder()
+                .id("2")
+                .hasRepresentative(YES.getValue())
+                .name(Name.builder().firstName("Harry").lastName("Rep").build())
+                .build())
+            .build();
+        final SscsCaseData caseData = SscsCaseData.builder()
+            .otherParties(List.of(new CcdValue<>(otherParty)))
+            .build();
+        final List<DynamicListItem> listOptions = new ArrayList<>();
+
+        addOtherPartiesToListOptions(caseData, listOptions, includeRepresentatives);
+
+        assertThat(listOptions).hasSize(expectedSize);
+        assertThat(listOptions).isNotEmpty();
+        assertThat(listOptions.getFirst().getCode()).isEqualTo(PartyItemList.OTHER_PARTY.getCode() + "1");
+        assertThat(
+            listOptions.stream().anyMatch(item -> item.getCode().startsWith(PartyItemList.OTHER_PARTY_REPRESENTATIVE.getCode())))
+            .isEqualTo(expectsRep);
+    }
+
+    private static Stream<Arguments> includeRepresentativesScenarios() {
+        return Stream.of(
+            Arguments.of(true, 2, true),
+            Arguments.of(false, 1, false)
+        );
+    }
+
+    @Test
+    void shouldPreserveExistingSelectedConfidentialityPartyWhenValueStillExists() {
+        final DynamicListItem existingValue = new DynamicListItem("appellant", "Appellant");
+        sscsCaseData.getExtendedSscsCaseData().setSelectedConfidentialityParty(new DynamicList(existingValue, new ArrayList<>()));
+
+        DynamicList dropdown = PartiesOnCaseUtil.getSelectedConfidentialityPartyDropdown(sscsCaseData);
+
+        assertThat(dropdown.getValue().getCode()).isEqualTo("appellant");
+    }
+
+    @Test
+    void shouldReturnBlankSelectedValueWhenNoExistingSelectedConfidentialityParty() {
+        final DynamicList dropdown = PartiesOnCaseUtil.getSelectedConfidentialityPartyDropdown(sscsCaseData);
+
+        assertThat(dropdown.getValue().getCode()).isEmpty();
+        assertThat(dropdown.getListItems()).isNotEmpty();
+    }
+
+    @Test
+    void shouldReturnBlankWhenExistingSelectionHasNullCode() {
+        sscsCaseData.getExtendedSscsCaseData().setSelectedConfidentialityParty(
+                new DynamicList(new DynamicListItem(null, "Appellant"), null));
+
+        final DynamicList dropdown = PartiesOnCaseUtil.getSelectedConfidentialityPartyDropdown(sscsCaseData);
+
+        assertThat(dropdown.getValue().getCode()).isEmpty();
+    }
+
+    @Test
+    void shouldReturnBlankWhenExistingSelectionCodeIsNoLongerInPartyList() {
+        sscsCaseData.getExtendedSscsCaseData().setSelectedConfidentialityParty(
+                new DynamicList(new DynamicListItem("staleOtherParty999", "Removed Party"), null));
+
+        final DynamicList dropdown = PartiesOnCaseUtil.getSelectedConfidentialityPartyDropdown(sscsCaseData);
+
+        assertThat(dropdown.getValue().getCode()).isEmpty();
+        assertThat(dropdown.getListItems()).isNotEmpty();
+    }
+
+    @ParameterizedTest
+    @MethodSource("nonChildSupportBenefitTypes")
+    void givenNonChildSupportBenefit_isChildSupportAppealReturnsFalse(String benefitShortName) {
+        sscsCaseData.getAppeal().setBenefitType(BenefitType.builder().code(benefitShortName).build());
+        assertFalse(isChildSupportAppeal(sscsCaseData));
+    }
+
+    private static Stream<Arguments> nonChildSupportBenefitTypes() {
+        return Stream.of(
+            Arguments.of(UC.getShortName()),
+            Arguments.of(PIP.getShortName())
+        );
+    }
+
     private void setupOtherParties() {
         OtherParty otherParty1 = OtherParty.builder()
-                .id("1")
-                .name(Name.builder().firstName("Bo").lastName("Surname").title("Mr").build())
-                .isAppointee(YES.getValue())
-                .appointee(Appointee.builder()
-                        .id("2")
-                        .name(Name.builder().firstName("Silva").lastName("Lining").build())
-                        .build())
-                .rep(Representative.builder()
-                        .id("3")
-                        .hasRepresentative(YES.getValue())
-                        .name(Name.builder().firstName("Harry").lastName("Rep").build())
-                        .build())
-                .build();
+            .id("1")
+            .name(Name.builder().firstName("Bo").lastName("Surname").title("Mr").build())
+            .isAppointee(YES.getValue())
+            .appointee(Appointee.builder()
+                .id("2")
+                .name(Name.builder().firstName("Silva").lastName("Lining").build())
+                .build())
+            .rep(Representative.builder()
+                .id("3")
+                .hasRepresentative(YES.getValue())
+                .name(Name.builder().firstName("Harry").lastName("Rep").build())
+                .build())
+            .build();
 
         OtherParty otherParty2 = OtherParty.builder()
-                .id("4")
-                .name(Name.builder().firstName("Cat").lastName("Snack").title("Mrs").build())
-                .rep(Representative.builder()
-                        .id("5")
-                        .hasRepresentative(YES.getValue())
-                        .name(Name.builder().firstName("Peter").lastName("Rep").build())
-                        .build())
-                .build();
+            .id("4")
+            .name(Name.builder().firstName("Cat").lastName("Snack").title("Mrs").build())
+            .rep(Representative.builder()
+                .id("5")
+                .hasRepresentative(YES.getValue())
+                .name(Name.builder().firstName("Peter").lastName("Rep").build())
+                .build())
+            .build();
         sscsCaseData.setOtherParties(List.of(new CcdValue<>(otherParty1), new CcdValue<>(otherParty2)));
         List<DynamicListItem> response = PartiesOnCaseUtil.getPartiesOnCase(sscsCaseData);
         assertEquals(5, response.size());
